changes made in css and html file

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 <body>
     <div class="top">
-        <h1 class="top-text">TIMBER VALLEY CAMPSITE</h1><br>
-        <h2 class="top-para">CAMPING--FISHING--PICNICSPOT--BONFIRE</h2>
         <nav class="stroke">
             <div class="menu-icon">
                 <div class="bar"></div>
@@ -28,6 +26,10 @@
                 <li><a href="#package">Package</a></li>
             </ul>  
         </nav> 
+        <h1 class="top-text">TIMBER VALLEY CAMPSITE</h1><br>
+        <h2 class="top-para">CAMPING--FISHING--PICNICSPOT--BONFIRE</h2>
+        <button><a href="#booking">Book Now</a></button>
+        
     </div>
     <div class="grid-container">
          <div class="grid-item">
@@ -120,23 +122,25 @@
       </div>
 
       <div class="footer">
-         <div class="footer-items1">This is footer</div>
-         <div class="footer-items2">
+         <div class="footer-items"><img src="./images/logo.png"></div>
+         <div class="footer-items">
             <p>The growth and expansion of the service industry in Sikkim has a direct influence
                 on the social and cultural environment of Sikkim. This in turn has an effect on what
                 Sikkim can offer its residents and visitors.</p>
          </div>
-         <div class="footer-items3">
+         <div class="footer-items">
             <h3>Contact Details</h3>
             <p>asdhakjshdk@gmail.com</p>
             <p>2323423423423</p>
          </div>
-         <div class="footer-items4">
-            <h3>Socials</h3>
-            <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-            <a href=""><i class="fa fa-google" aria-hidden="true"></i></a>
-            <a href=""><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+         <div class="footer-items">
+            <div class="footer-items-socials">
+                <h3>Socials</h3>
+                <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href=""><i class="fa fa-google" aria-hidden="true"></i></a>
+                <a href=""><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+            </div>
          </div>
       </div>
 </body>
