changes in links

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
     </div>
     <div class="google-maps" id="maps">
          <img  src="./images/googlemaps.png">
-         <button class="google-maps-button">Google Maps</button>
+         <button class="google-maps-button"><a href="https://www.google.com/maps/place/Local+Connection+-+khedi+Base+Camp/@27.
+            2835848,88.3420865,11z/data=!4m13!1m2!2m1!1stimber+valley+campsite+assam+lingzey!3m9!1s0x39e6a5a193618aa1:0xf2cb4e
+            a0eda50ff7!5m2!4m1!1i2!8m2!3d27.2835848!4d88.6469571!15sCiR0aW1iZXIgdmFsbGV5IGNhbXBzaXRlIGFzc2FtIGxpbmd6ZXmSARJwcml
+            2YXRlX2d1ZXN0X3Jvb23gAQA!16s%2Fg%2F11rqlcnqd9?entry=ttu">Google Maps</button></a>
     </div>
     <div class="gallery" id ="gallery">
          <h1 style="margin-bottom: 30px; margin-left: 14px;">GALLERY</h1>
@@ -130,16 +133,16 @@
          </div>
          <div class="footer-items">
             <h3>Contact Details</h3>
-            <p>asdhakjshdk@gmail.com</p>
-            <p>2323423423423</p>
+            <p>deepeshchettri111@gmail.com</p>
+            <p>+91 96410 95638</p>
          </div>
          <div class="footer-items">
             <div class="footer-items-socials">
                 <h3>Socials</h3>
-                <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                <a href=""><i class="fa fa-google" aria-hidden="true"></i></a>
-                <a href=""><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/timbervalley_campsite/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/people/Timber-valley-campsite/100089193368074/?mibextid=ZbWKwL"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href="https://www.gmail.com"><i class="fa fa-google" aria-hidden="true"></i></a>
+                <a href="https://web.whatsapp.com/"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
             </div>
          </div>
       </div>
