change in whatsapp number

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <a href="https://www.instagram.com/timbervalley_campsite/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 <a href="https://www.facebook.com/people/Timber-valley-campsite/100089193368074/?mibextid=ZbWKwL"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
                 <a href="https://www.gmail.com"><i class="fa fa-google" aria-hidden="true"></i></a>
-                <a href="https://web.whatsapp.com/"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                <a href="https://wa.me/+919641095638"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
             </div>
          </div>
       </div>
