--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script type="text/javascript" type="module" src="./index.js"></script>
+    
 </head>
 <body>
     <div class="top">
@@ -87,12 +87,12 @@
     <div class="gallery" id ="gallery">
          <h1 style="margin-bottom: 30px; margin-left: 14px;">GALLERY</h1>
          <div class="gallery-grid-container">
-              <div class="gallery-grid-item"><img src="./images/intro1.jpg"></div>
-              <div class="gallery-grid-item"><img src="./images/intro.jpg"></div>
-              <div class="gallery-grid-item"><img src="./images/intro3.jpg"></div>
-              <div class="gallery-grid-item"><img src="./images/intro2.jpg"></div>
-              <div class="gallery-grid-item"><img src="./images/intro2.jpg"></div>
-              <div class="gallery-grid-item"><img src="./images/intro2.jpg"></div>
+              <div class="gallery-grid-item"><img src="./images/intro1.jpg" class="fade-in"></div>
+              <div class="gallery-grid-item"><img src="./images/intro.jpg"  class="fade-in"></div>
+              <div class="gallery-grid-item"><img src="./images/intro3.jpg" class="fade-in"></div>
+              <div class="gallery-grid-item"><img src="./images/intro2.jpg" class="fade-in"></div>
+              <div class="gallery-grid-item"><img src="./images/intro2.jpg" class="fade-in"></div>
+              <div class="gallery-grid-item"><img src="./images/intro2.jpg" class="fade-in"></div>
          </div>
     </div>
     <div class="booking" id="booking">
@@ -148,5 +148,7 @@
             </div>
          </div>
       </div>
+
+      <script type="text/javascript" type="module" src="./index.js"></script>
 </body>
 </html>
